--- a/wpfclient/packages.config
+++ b/wpfclient/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Avalonia" version="0.9.12" targetFramework="net472" />
-  <package id="Avalonia.Controls.DataGrid" version="0.9.12" targetFramework="net472" />
   <package id="Avalonia.Remote.Protocol" version="0.9.12" targetFramework="net472" />
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net472" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net472" />
   <package id="ControlzEx" version="4.3.2" targetFramework="net472" />
   <package id="JetBrains.Annotations" version="10.3.0" targetFramework="net472" />
+  <package id="log4net" version="2.0.9" targetFramework="net472" />
   <package id="MahApps.Metro" version="2.2.0" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks" version="4.4.0" targetFramework="net472" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net472" />
@@ -16,6 +16,7 @@
   <package id="Serilog.Sinks.Trace" version="2.1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Composition" version="4.7.0" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
